// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's purchase destination action: all fields 1`] = `
Object {
  "channel_type": "Gxw(AXLlJ#6Uf]*Hp",
  "device": Object {
    "advertising_id": "Gxw(AXLlJ#6Uf]*Hp",
    "ip": "Gxw(AXLlJ#6Uf]*Hp",
    "language": "Gxw(AXLlJ#6Uf]*Hp",
    "model": "Gxw(AXLlJ#6Uf]*Hp",
    "os": "GXW(AXLLJ#6UF]*HP",
    "os_version": "Gxw(AXLlJ#6Uf]*Hp",
    "ua": "Gxw(AXLlJ#6Uf]*Hp",
    "unique_device_id": "Gxw(AXLlJ#6Uf]*Hp",
  },
  "event_type": "PURCHASE",
  "id": "Gxw(AXLlJ#6Uf]*Hp",
  "items": Array [
    Object {
      "id": "Gxw(AXLlJ#6Uf]*Hp",
      "price": Object {
        "amount": 52157945353338.88,
        "currency": "DKK",
      },
      "quantity": 5215794535333888,
      "seller_id": "Gxw(AXLlJ#6Uf]*Hp",
    },
  ],
  "page_id": "Gxw(AXLlJ#6Uf]*Hp",
  "revenue": Object {
    "amount": 52157945353338.88,
    "currency": "DKK",
  },
  "session_id": "Gxw(AXLlJ#6Uf]*Hp",
  "shipping_charge": Object {
    "amount": 52157945353338.88,
    "currency": "DKK",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "Gxw(AXLlJ#6Uf]*Hp",
}
`;

exports[`Testing snapshot for MolocoRmp's purchase destination action: required fields 1`] = `
Object {
  "channel_type": "Gxw(AXLlJ#6Uf]*Hp",
  "event_type": "PURCHASE",
  "id": "Gxw(AXLlJ#6Uf]*Hp",
  "items": Array [
    Object {
      "id": "Gxw(AXLlJ#6Uf]*Hp",
    },
  ],
  "page_id": "Gxw(AXLlJ#6Uf]*Hp",
  "revenue": Object {
    "amount": 52157945353338.88,
    "currency": "DKK",
  },
  "session_id": "Gxw(AXLlJ#6Uf]*Hp",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "Gxw(AXLlJ#6Uf]*Hp",
}
`;
